style: code format. test: add test